Source/WebCore/platform/graphics/FloatRect.h
@@ -124,21 +124,36 @@ public:
         setX(edge);
         setWidth(std::max(0.0f, width() - delta));
     }
+
     void shiftMaxXEdgeTo(float edge)
     {
         float delta = edge - maxX();
         setWidth(std::max(0.0f, width() + delta));
     }
+
     void shiftYEdgeTo(float edge)
     {
         float delta = edge - y();
         setY(edge);
         setHeight(std::max(0.0f, height() - delta));
     }
+
     void shiftMaxYEdgeTo(float edge)
     {
         float delta = edge - maxY();
         setHeight(std::max(0.0f, height() + delta));
+    }
+
+    void shiftXEdgeBy(float delta)
+    {
+        move(delta, 0);
+        setWidth(std::max(0.0f, width() - delta));
+    }
+
+    void shiftYEdgeBy(float delta)
+    {
+        move(0, delta);
+        setHeight(std::max(0.0f, height() - delta));
     }
 
     FloatPoint minXMinYCorner() const { return m_location; } // typically topLeft
